fix(navbar): ensure mobile navbar visibility and stable toggler behavior

--- a/public/assets/index/css/responsive.css
+++ b/public/assets/index/css/responsive.css
@@ -95,10 +95,10 @@
     .navigation .navbar-collapse {
         background: #fff;
         padding: 20px;
-        margin-top: 46px;
-        position: absolute;
+        margin-top: 10px;
+        position: static;
         width: 100%;
-        margin-right: 20px;
+        margin-right: 0;
         z-index: 999;
     }
     .navigation.navbar-dark .navbar-nav .nav-link {
@@ -111,8 +111,10 @@
         padding-top: 6px;
     }
     .navigation.navbar-dark .navbar-toggler-icon {
-        background: url(../images/menu_icon.png);
+        background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(255,255,255,1)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E");
         background-repeat: no-repeat;
+        background-position: center;
+        background-size: 100% 100%;
     }
     .projects::after {
         background: transparent;
@@ -189,17 +191,34 @@
         display: inherit !important;
         padding: 0;
         width: 100%;
-        margin-top: -45px;
+            margin-top: 0;
+            position: relative;
     }
-    .navigation .navbar-collapse {
+        .navigation .navbar-collapse {
         background: #fff;
         padding: 20px;
-        margin-top: 46px;
-        position: absolute;
-        width: 100%;
-        margin-right: 20px;
-        z-index: 999;
-    }
+            margin-top: 0;
+            position: absolute;
+            top: 100%;
+            left: 0;
+            width: 100%;
+            margin-right: 0;
+            z-index: 10000010;
+        }
+        .navigation .navbar-collapse.show {
+            display: block !important;
+            visibility: visible;
+            opacity: 1;
+            pointer-events: auto;
+        }
+        .navigation .navbar-collapse.collapsing {
+            height: auto !important;
+            transition: none !important;
+        }
+        .navigation .navbar-toggler {
+            z-index: 10000020;
+            pointer-events: auto;
+        }
     .navigation.navbar-dark .navbar-nav .nav-link {
         padding: 10px 0;
         color: #000;
@@ -213,8 +232,10 @@
         padding: 0px 19px 40px 20px;
     }
     .navigation.navbar-dark .navbar-toggler-icon {
-        background: url(../images/menu_icon.png);
+        background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(255,255,255,1)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E");
         background-repeat: no-repeat;
+        background-position: center;
+        background-size: 100% 100%;
     }
 }
 
